--- a/.htaccess
+++ b/.htaccess
@@ -316,6 +316,10 @@ AddDefaultCharset utf-8
     # (5)
     # RewriteOptions <options>
 
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
 </IfModule>
 
 # ----------------------------------------------------------------------
