--- a/.htaccess
+++ b/.htaccess
@@ -394,6 +394,8 @@ RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
 # Rewrite example.com → www.example.com
 
+Redirect 301 /index /
+
 # The same content should never be available under two different URLs,
 # especially not with and without `www.` at the beginning.
 # This can cause SEO problems (duplicate content), and therefore, you should
